force-app/main/default/objects/Occurrences__c/Occurrences__c.object-meta.xml
<CustomObject>
    <label>Occurrences</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>Occurrence Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Occurrences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>