force-app/main/default/objects/Occurrences__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <length>255</length>
    <type>Text</type>
</CustomField>