force-app/main/default/objects/Occurrences__c/fields/DateOccurrence__c.field-meta.xml
<CustomField>
    <fullName>DateOccurrence__c</fullName>
    <formula>RDO__r.Date__c</formula>
    <label>Date of Occurrence</label>
    <type>Date</type>
</CustomField>