force-app/main/default/objects/Occurrences__c/fields/DateOccurrenceOld__c.field-meta.xml
<CustomField>
    <fullName>DateOccurrenceOld__c</fullName>
    <label>Date of Occurrence Old</label>
    <type>Date</type>
</CustomField>