force-app/main/default/objects/Occurrences__c/fields/OccurrenceGroup__c.field-meta.xml
<CustomField>
    <fullName>OccurrenceGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Occurrence Group</label>
    <referenceTo>OccurrenceGroup__c</referenceTo>
    <relationshipLabel>Occurrences</relationshipLabel>
    <relationshipName>Occurrences</relationshipName>
    <type>Lookup</type>
</CustomField>