force-app/main/default/objects/Occurrences__c/fields/RDO__c.field-meta.xml
<CustomField>
    <fullName>RDO__c</fullName>
    <label>RDO</label>
    <referenceTo>RDO__c</referenceTo>
    <relationshipLabel>Occurrences</relationshipLabel>
    <relationshipName>Occurrences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>