force-app/main/default/objects/Occurrences__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OccurrenceGroup__c</columns>
    <columns>RDO__c</columns>
    <columns>Status__c</columns>
    <columns>DateOccurrence__c</columns>
    <columns>Deadline__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>